--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,19 @@ PORT=3000
 
 # Node Environment
 NODE_ENV=development
+
+# ===========================
+# EMAIL CONFIGURATION
+# ===========================
+
+# Gmail SMTP Configuration
+# Note: You need to create an "App Password" in your Google Account
+# Go to: https://myaccount.google.com/apppasswords
+EMAIL_USER=casonabelga@gmail.com
+EMAIL_PASSWORD=your_gmail_app_password_here
+
+# Admin email (receives booking notifications)
+ADMIN_EMAIL=casonabelga@gmail.com
+
+# From email (sender for booking notifications)
+FROM_EMAIL=casonabelga@gmail.com
