--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["chatbot", "ai", "gemini", "express"],
+  "keywords": [
+    "chatbot",
+    "ai",
+    "gemini",
+    "express"
+  ],
   "author": "Casona Belga",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@google/generative-ai": "^0.21.0"
+    "express": "^4.18.2",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
